further opt + value set

--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "9008"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -392,20 +392,22 @@
     "data_sample = pd.DataFrame(data_sample_temp)\n",
     "print(data_sample)\n",
     "testrow = 3\n",
+    "valrow = 4\n",
     "data_test = pd.DataFrame(data_sample[testrow])\n",
+    "data_val = pd.DataFrame(data_sample[valrow])\n",
     "data_train = data_sample.loc[:, data_sample.columns != testrow]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[146, 52, 91, 109, 61, 163, 159, 494, 618, 988, 797, 935, 853, 846, 124, 402, 380, 1052, 477, 48, 825, 21, 613, 35, 489, 93, 624, 1057, 946, 117, 123, 176, 66, 455, 70, 555, 381, 862, 331] 39 [46, 388, 709, 494, 94, 159, 992] 7\n"
+      "[146, 52, 91, 109, 61, 163, 159, 494, 618, 988, 797, 935, 853, 846, 124, 402, 380, 1052, 477, 48, 825, 21, 613, 35, 489, 93, 624, 1057, 946, 117, 123, 176, 66, 455, 70, 555, 381, 862, 331] 39 [46, 388, 709, 494, 94, 159, 992] 7 [109, 988, 402, 21, 1057, 381] 6\n"
      ]
     }
    ],
@@ -416,9 +418,11 @@
     "    index_list = list(flat[~np.isnan(flat)].astype(int))\n",
     "    return index_list\n",
     "\n",
+    "\n",
     "datalist_train = into_list(data_train)\n",
+    "datalist_val = into_list(data_val)\n",
     "datalist_test = into_list(data_test)\n",
-    "print(datalist_train, len(datalist_train), datalist_test, len(datalist_test))"
+    "print(datalist_train, len(datalist_train), datalist_test, len(datalist_test), datalist_val, len(datalist_val))"
    ]
   },
   {
@@ -460,20 +464,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Michael\\AppData\\Local\\Temp\\ipykernel_7936\\749947659.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\Michael\\AppData\\Local\\Temp\\ipykernel_15796\\4154040355.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[\"image_name\"] = None\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>choice</th>\n",
+       "      <th>label</th>\n",
+       "      <th>annotator</th>\n",
+       "      <th>annotation_id</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>updated_at</th>\n",
+       "      <th>lead_time</th>\n",
+       "      <th>image_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[{'points': [[22.156270306818218, 24.152013730...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>246</td>\n",
+       "      <td>2023-12-04 14:02:56.554854+00:00</td>\n",
+       "      <td>2023-12-04 14:02:56.554870+00:00</td>\n",
+       "      <td>49.515</td>\n",
+       "      <td>LB00001035.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Manuell überprüfter Container</td>\n",
+       "      <td>[{'points': [[50.777369418324426, 55.228380434...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>124</td>\n",
+       "      <td>2023-09-26 08:58:36.491863+00:00</td>\n",
+       "      <td>2023-09-26 08:58:36.491881+00:00</td>\n",
+       "      <td>49.121</td>\n",
+       "      <td>LB00000410.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[{'points': [[57.37723827714646, 70.4030129649...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>200</td>\n",
+       "      <td>2023-09-26 11:17:36.646951+00:00</td>\n",
+       "      <td>2023-09-26 11:17:36.646969+00:00</td>\n",
+       "      <td>73.292</td>\n",
+       "      <td>LB00000503.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[{'points': [[19.97011915885095, 37.1039417518...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>216</td>\n",
+       "      <td>2023-12-04 12:13:01.159678+00:00</td>\n",
+       "      <td>2023-12-04 12:13:01.159694+00:00</td>\n",
+       "      <td>4129.937</td>\n",
+       "      <td>LB00000586.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[{'points': [[31.09667939787316, 30.8655531796...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2023-09-26 09:08:48.512607+00:00</td>\n",
+       "      <td>2023-09-26 09:08:48.512625+00:00</td>\n",
+       "      <td>75.633</td>\n",
+       "      <td>LB00000436.png</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            choice  \\\n",
+       "id                                   \n",
+       "147                            NaN   \n",
+       "53   Manuell überprüfter Container   \n",
+       "92                             NaN   \n",
+       "110                            NaN   \n",
+       "62                             NaN   \n",
+       "\n",
+       "                                                 label  annotator  \\\n",
+       "id                                                                  \n",
+       "147  [{'points': [[22.156270306818218, 24.152013730...          1   \n",
+       "53   [{'points': [[50.777369418324426, 55.228380434...          1   \n",
+       "92   [{'points': [[57.37723827714646, 70.4030129649...          1   \n",
+       "110  [{'points': [[19.97011915885095, 37.1039417518...          1   \n",
+       "62   [{'points': [[31.09667939787316, 30.8655531796...          1   \n",
+       "\n",
+       "     annotation_id                       created_at  \\\n",
+       "id                                                    \n",
+       "147            246 2023-12-04 14:02:56.554854+00:00   \n",
+       "53             124 2023-09-26 08:58:36.491863+00:00   \n",
+       "92             200 2023-09-26 11:17:36.646951+00:00   \n",
+       "110            216 2023-12-04 12:13:01.159678+00:00   \n",
+       "62             133 2023-09-26 09:08:48.512607+00:00   \n",
+       "\n",
+       "                          updated_at  lead_time      image_name  \n",
+       "id                                                               \n",
+       "147 2023-12-04 14:02:56.554870+00:00     49.515  LB00001035.png  \n",
+       "53  2023-09-26 08:58:36.491881+00:00     49.121  LB00000410.png  \n",
+       "92  2023-09-26 11:17:36.646969+00:00     73.292  LB00000503.png  \n",
+       "110 2023-12-04 12:13:01.159694+00:00   4129.937  LB00000586.png  \n",
+       "62  2023-09-26 09:08:48.512625+00:00     75.633  LB00000436.png  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -496,7 +640,7 @@
     "dataexport_train = extractsublist(data, datalist_train)\n",
     "dataexport_train = extract_nameending(dataexport_train)\n",
     "dataexport_train.head()\n",
-    "export(dataexport_train, \"Trainingdata\")"
+    "# export(dataexport_train, \"Trainingdata\")"
    ]
   },
   {
@@ -508,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,9 +666,8 @@
     "\n",
     "# Say descriptions\n",
     "description_train = \"trainingset_small\"\n",
+    "description_val = \"validierungsset_small\"\n",
     "description_test = \"testset_small\"\n",
-    "\n",
-    "cocox\n",
     "\n",
     "def createSubsetStructure(originalData, description):\n",
     "    subsetStructure = {\n",
@@ -566,12 +709,17 @@
     "        g.write(jsonObject)\n",
     "\n",
     "trainset = createCOCOSubset(cocox, datalist_train, description=description_train)\n",
+    "valset = createCOCOSubset(cocox, datalist_val, description=description_val)\n",
     "testset = createCOCOSubset(cocox, datalist_test, description=description_test)\n",
     "\n",
     "json_train = json.dumps(trainset, indent=4)\n",
+    "json_val = json.dumps(valset, indent=4)\n",
     "json_test = json.dumps(testset, indent=4)\n",
     "\n",
+    "target_directory = \"'../../../old/BAA/Annotierte_Bilder/2024-02-21-Schadenserkennung-Annotationen'\"\n",
+    "\n",
     "writeJson(json_train, \"coco_train\")\n",
+    "writeJson(json_val, \"coco_val\")\n",
     "writeJson(json_test, \"coco_test\")"
    ]
   },
