finished data preparation (only local machine, not cleaned code)

--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -9,14 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os\n",
+    "import glob\n",
+    "import shutil"
    ]
   },
   {
@@ -301,11 +304,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "image_namen_liste = []\n",
     "data_preprocessed[\"image_name\"] = None\n",
     "for i, row in data_preprocessed.iterrows():\n",
-    "    data_preprocessed.loc[i, \"image_name\"]= row[\"image\"].split(\"/\")[-1]\n",
+    "    data_preprocessed.loc[i, \"image_name\"] = row[\"image\"].split(\"/\")[-1]\n",
+    "    z = row[\"image\"].split(\"/\")[-1]\n",
+    "    image_namen_liste.append(f\"{z}\")\n",
     "data_preprocessed = data_preprocessed.drop(\"image\", axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -400,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +484,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Michael\\AppData\\Local\\Temp\\ipykernel_15796\\4154040355.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\Michael\\AppData\\Local\\Temp\\ipykernel_19376\\4154040355.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -651,8 +664,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "erstellen eines zweiten files aus dem die doppelten und nicht annotierten image daten gelöscht wurden."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,13 +681,19 @@
     "\n",
     "path = \"../../../old/BAA/coco_annotations.json\"\n",
     "\n",
-    "with open(path, \"r\") as f:\n",
-    "    cocox = json.load(f)\n",
-    "\n",
-    "# Say descriptions\n",
-    "description_train = \"trainingset_small\"\n",
-    "description_val = \"validierungsset_small\"\n",
-    "description_test = \"testset_small\"\n",
+    "newpath = \"../../../old/BAA/Data/\"\n",
+    "newfilename = \"coco_annotations_cleaned.json\"\n",
+    "completeNewPath = \"../../../old/BAA/coco_annotations_cleaned.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#with open(path, \"r\") as f:\n",
+    "#    cocoOriginal = json.load(f)\n",
     "\n",
     "def createSubsetStructure(originalData, description):\n",
     "    subsetStructure = {\n",
@@ -683,16 +709,123 @@
     "    }\n",
     "    return subsetStructure\n",
     "\n",
+    "def clearCOCO(cocoOriginal, image_namen_ls):\n",
+    "    imageIDlist = []\n",
+    "    notUsedImageNames = []\n",
+    "    descr = \"gecleantes COCO Datenset, ohne doppelte Bilder, ohne nicht annotierten Bilder, nur daten die in dem Ursprungsexport dieses Projekts enthalten waren\"\n",
+    "    cocoNew = createSubsetStructure(cocoOriginal, description=descr)\n",
+    "    minID = cocoOriginal[\"annotations\"][0][\"image_id\"] # kleineste ID der annotierten Daten\n",
+    "    lastID = cocoOriginal[\"images\"][-1][\"id\"]\n",
+    "    for n in range(minID, lastID + 1): #last ID included\n",
+    "        cocoOriginal[\"images\"][n][\"file_name\"] = cocoOriginal[\"images\"][n][\"file_name\"].split(\"/\")[-1]\n",
+    "        if cocoOriginal[\"images\"][n][\"file_name\"] in image_namen_ls:\n",
+    "            imageIDlist.append(cocoOriginal[\"images\"][n][\"id\"])\n",
+    "            cocoNew[\"images\"].append(cocoOriginal[\"images\"][n])\n",
+    "        elif n == minID: # need this because the first three images begin with a %, this was used to format strings, and it is still working apparently. Because of it, this images werent catched with the first if statement...\n",
+    "            imageIDlist.append(cocoOriginal[\"images\"][n][\"id\"])\n",
+    "            cocoNew[\"images\"].append(cocoOriginal[\"images\"][n])\n",
+    "        elif n == minID + 1:\n",
+    "            imageIDlist.append(cocoOriginal[\"images\"][n][\"id\"])\n",
+    "            cocoNew[\"images\"].append(cocoOriginal[\"images\"][n])\n",
+    "        elif n == minID + 2:\n",
+    "            imageIDlist.append(cocoOriginal[\"images\"][n][\"id\"])\n",
+    "            cocoNew[\"images\"].append(cocoOriginal[\"images\"][n])\n",
+    "        else: \n",
+    "            notUsedImageNames.append(cocoOriginal[\"images\"][n][\"file_name\"])\n",
+    "    for i in range(len(cocoOriginal[\"annotations\"])):\n",
+    "        if cocoOriginal[\"annotations\"][i][\"image_id\"] in imageIDlist:\n",
+    "            cocoNew[\"annotations\"].append(cocoOriginal[\"annotations\"][i])\n",
+    "    return cocoNew\n",
+    "\n",
+    "def writeJson(jsonObject, filename):\n",
+    "    if filename.split(\".\")[-1] != \"json\":\n",
+    "        filename = f\"{filename}.json\"\n",
+    "    with open(filename, \"w\") as g:\n",
+    "        g.write(jsonObject)\n",
+    "        \n",
+    "# Uncomment if a new dataset needs to be loaded and cleared (thogether with the load statement)\n",
+    "#cocoCleared = clearCOCO(cocoOriginal=cocoOriginal, image_namen_ls=image_namen_liste)\n",
+    "#coco_cleared = json.dumps(cocoCleared, indent=4)\n",
+    "#writeJson(coco_cleared, completeNewPath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'%25B00001340.png'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_preprocessed[\"image_name\"].loc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "with open(completeNewPath, \"r\") as f:\n",
+    "    cocox = json.load(f)\n",
+    "\n",
+    "# Say descriptions\n",
+    "description_train = \"trainingset_small\"\n",
+    "description_val = \"validierungsset_small\"\n",
+    "description_test = \"testset_small\"\n",
+    "\n",
+    "# to use the original split from the YOLO format in the newer export of COCO that has high ID's\n",
+    "def adapt_IDList(cocodata, subsetIDList):\n",
+    "    namelist = []\n",
+    "    ID_cleaned_list = []\n",
+    "    for n in subsetIDList:\n",
+    "        namelist.append(data_preprocessed[\"image_name\"].loc[n])\n",
+    "    for i in cocodata[\"images\"]:\n",
+    "        if i[\"file_name\"] in namelist:\n",
+    "            ID_cleaned_list.append(i[\"id\"])\n",
+    "    return ID_cleaned_list\n",
+    "\n",
     "def createSubsetImages(subset, cocodata, subsetIDList):\n",
     "    # change file_name for the actual name without the whole path\n",
     "    for n in range(len(cocodata[\"images\"])):\n",
-    "        cocodata[\"images\"][n][\"file_name\"] = cocodata[\"images\"][n][\"file_name\"].split(\"/\")[-1]\n",
+    "        # not needed with a cleaned dataset\n",
+    "        # cocodata[\"images\"][n][\"file_name\"] = cocodata[\"images\"][n][\"file_name\"].split(\"/\")[-1]\n",
     "        if cocodata[\"images\"][n][\"id\"] in subsetIDList:\n",
     "            subset[\"images\"].append(cocodata[\"images\"][n])\n",
     "\n",
     "def createSubsetAnnotations(subset, cocodata, subsetIDList):\n",
     "    for n in range(len(cocodata[\"annotations\"])):\n",
-    "        cocodata[\"annotations\"][n][\"image_id\"] -= 20000\n",
+    "        # not needed with a cleaned IDlist\n",
+    "        # cocodata[\"annotations\"][n][\"image_id\"] -= 20000\n",
     "        if cocodata[\"annotations\"][n][\"image_id\"] in subsetIDList:\n",
     "            subset[\"annotations\"].append(cocodata[\"annotations\"][n])\n",
     "\n",
@@ -702,25 +835,71 @@
     "    createSubsetAnnotations(cocosub, cocodata, subsetIDList)\n",
     "    return cocosub\n",
     "\n",
-    "def writeJson(jsonObject, filename):\n",
-    "    if filename.split(\".\")[-1] != \"json\":\n",
-    "        filename = f\"{filename}.json\"\n",
-    "    with open(filename, \"w\") as g:\n",
-    "        g.write(jsonObject)\n",
+    "# clean subsetIDLists in order to be used with the coco dataset that uses way too hight id numbers\n",
+    "d_train = adapt_IDList(cocox, datalist_train)\n",
+    "d_val = adapt_IDList(cocox, datalist_val)\n",
+    "d_test = adapt_IDList(cocox, datalist_test)\n",
     "\n",
-    "trainset = createCOCOSubset(cocox, datalist_train, description=description_train)\n",
-    "valset = createCOCOSubset(cocox, datalist_val, description=description_val)\n",
-    "testset = createCOCOSubset(cocox, datalist_test, description=description_test)\n",
+    "print(len(d_train))\n",
+    "print(len(d_val))\n",
+    "print(len(d_test))\n",
+    "\n",
+    "trainset = createCOCOSubset(cocox, d_train, description=description_train)\n",
+    "valset = createCOCOSubset(cocox, d_val, description=description_val)\n",
+    "testset = createCOCOSubset(cocox, d_test, description=description_test)\n",
     "\n",
     "json_train = json.dumps(trainset, indent=4)\n",
     "json_val = json.dumps(valset, indent=4)\n",
     "json_test = json.dumps(testset, indent=4)\n",
     "\n",
-    "target_directory = \"'../../../old/BAA/Annotierte_Bilder/2024-02-21-Schadenserkennung-Annotationen'\"\n",
+    "target_directory = \"../../../old/BAA/Annotierte_Bilder/2024-02-21-Schadenserkennung-Annotationen/\"\n",
     "\n",
-    "writeJson(json_train, \"coco_train\")\n",
-    "writeJson(json_val, \"coco_val\")\n",
-    "writeJson(json_test, \"coco_test\")"
+    "\n",
+    "\n",
+    "\n",
+    "# export data to separate files\n",
+    "trainpath = newpath + \"train/\"\n",
+    "valpath = newpath + \"val/\"\n",
+    "testpath = newpath + \"test/\"\n",
+    "\n",
+    "\n",
+    "writeJson(json_train, trainpath)\n",
+    "writeJson(json_val, valpath)\n",
+    "writeJson(json_test, testpath)\n",
+    "\n",
+    "\n",
+    "image_folder = target_directory + \"images/\"\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def copyImages(image_list, target_dict):\n",
+    "    images = glob.glob(os.path.join(image_folder, \"*.png\"))\n",
+    "    for i in images:\n",
+    "        basename = os.path.basename(i)\n",
+    "        if basename in image_list:\n",
+    "            shutil.copy(i, target_dict)\n",
+    "\n",
+    "def getImageNames(cocodata):\n",
+    "    nameList = []\n",
+    "    for n in cocodata[\"images\"]:\n",
+    "        nameList.append(n[\"file_name\"])\n",
+    "    return nameList\n",
+    "\n",
+    "train_names = getImageNames(trainset)\n",
+    "val_names = getImageNames(valset)\n",
+    "test_names = getImageNames(testset)\n",
+    "\n",
+    "copyImages(train_names, trainpath)\n",
+    "copyImages(val_names, valpath)\n",
+    "copyImages(test_names, testpath)\n",
+    "        "
    ]
   },
   {
