renamed json output

--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -778,19 +778,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "39\n",
-      "6\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -840,9 +830,6 @@
     "d_val = adapt_IDList(cocox, datalist_val)\n",
     "d_test = adapt_IDList(cocox, datalist_test)\n",
     "\n",
-    "print(len(d_train))\n",
-    "print(len(d_val))\n",
-    "print(len(d_test))\n",
     "\n",
     "trainset = createCOCOSubset(cocox, d_train, description=description_train)\n",
     "valset = createCOCOSubset(cocox, d_val, description=description_val)\n",
@@ -863,9 +850,9 @@
     "testpath = newpath + \"test/\"\n",
     "\n",
     "\n",
-    "writeJson(json_train, trainpath)\n",
-    "writeJson(json_val, valpath)\n",
-    "writeJson(json_test, testpath)\n",
+    "writeJson(json_train, trainpath + \"coco_train.json\")\n",
+    "writeJson(json_val, valpath + \"coco_val.json\")\n",
+    "writeJson(json_test, testpath + \"coco_test.json\")\n",
     "\n",
     "\n",
     "image_folder = target_directory + \"images/\"\n",
