changed from an ipython file to a python file because of small errors with PIL loading images (restarting kernel fixes it)

--- a/UI/UI_dev.ipynb
+++ b/UI/UI_dev.ipynb
@@ -14,48 +14,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_FOLDER = 'result'\n",
-    "CANVAS_WIDTH = 800\n",
-    "CANVAS_HEIGHT = 500\n",
-    "INPUT_FOLDER = \"prediction_images\"\n",
+    "OUTPUT_FOLDER = '../result/'\n",
+    "CANVAS_WIDTH = 2400\n",
+    "CANVAS_HEIGHT = 1300\n",
+    "INPUT_FOLDER = \"../predicted_images/\"\n",
     "\n",
     "root = tk.Tk()\n",
-    "\n",
     "root.title(\"Benutzeroberfläche zur Expertenkontrolle\")\n",
-    "\n",
     "root.geometry(f\"{CANVAS_WIDTH}x{CANVAS_HEIGHT}\")\n",
     "\n",
-    "lbl = tk.Label(root, text=\"Bild Nummer: LB0384560386\")\n",
-    "lbl.grid()\n",
+    "canvas = tk.Canvas(root, width=CANVAS_WIDTH, height=CANVAS_HEIGHT)\n",
+    "canvas.pack()\n",
+    "\n",
+    "img = ImageTk.PhotoImage(Image.open(\"../predicted_images/image_predicted_01.png\"))\n",
+    "\n",
+    "canvas.create_image(200, 200, anchor=\"nw\", image=img)\n",
+    "\n",
+    "\n",
     "\n",
     "def clicked():\n",
     "    lbl.configure(text=\"Got clicked\")\n",
     "\n",
     "btn = tk.Button(root, text=\"Clickiiiii\", fg=\"green\", command=clicked)\n",
-    "btn.grid()\n",
+    "\n",
     "\n",
     "root.mainloop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "class ImageApp:\n",
+    "    OUTPUT_FOLDER = '../result/'\n",
+    "    training_script_path = 'train.py'\n",
+    "    INPUT_FOLDER = \"../predicted_images/\"\n",
+    "    CANVAS_WIDTH = 800\n",
+    "    CANVAS_HEIGHT = 500\n",
+    "    no_images_left_placeholder = \"resources/no-images-placeholder.png\"\n",
+    "\n",
+    "    def __init__(self, root):\n",
+    "        self.draw = None\n",
+    "        self.root = root\n",
+    "        self.root.title(\"Auswertung Erkennung Buchschäden\")\n",
+    "        self.root.geometry(f\"{self.CANVAS_WIDTH}x{self.CANVAS_HEIGHT + 110}\")\n",
+    "\n",
+    "        self.image_index = 0\n",
+    "        self.image_paths = []\n",
+    "        self.current_image = None\n",
+    "        self.detected_damage_queue = []\n",
+    "\n",
+    "        self.canvas = tk.Canvas(root, width=self.CANVAS_WIDTH, height=self.CANVAS_HEIGHT)\n",
+    "        self.canvas.pack()\n",
+    "\n",
+    "        self.filename_label = tk.Label(root, text=\"\", fg=\"gray\", font=(\"Arial\", 10))\n",
+    "        self.filename_label.pack()\n",
+    "\n",
+    "        self.prev_button = tk.Button(root, text=\"Previous Image\", command=self.prev_image)\n",
+    "        self.prev_button.pack(side=\"left\")\n",
+    "        self.next_button = tk.Button(root, text=\"Next Image\", command=self.next_image)\n",
+    "        self.next_button.pack(side=\"right\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        self.load_images_from_directory()\n",
+    "\n",
+    "    def load_images_from_directory(self):\n",
+    "        self.image_paths = [os.path.join(self.INPUT_FOLDER, filename) for filename in os.listdir(self.INPUT_FOLDER) if\n",
+    "                            filename.lower().endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp'))]\n",
+    "        print(self.image_paths)\n",
+    "        self.show_current_image()\n",
+    "\n",
+    "    def show_current_image(self):\n",
+    "        if self.image_paths:\n",
+    "            image_path = self.image_paths[self.image_index]\n",
+    "            image = Image.open(image_path)\n",
+    "            width, height = image.size\n",
+    "            image.thumbnail((self.CANVAS_WIDTH, self.CANVAS_HEIGHT))\n",
+    "\n",
+    "            # Create an ImageDraw object to draw on the image\n",
+    "            self.draw = ImageDraw.Draw(image)\n",
+    "            self.filename_label.config(text=os.path.basename(image_path))\n",
+    "\n",
+    "            #if not self.detected_damage_queue:\n",
+    "                #self.detected_damage_queue = self.get_detected_damage(image_path, width, height)\n",
+    "\n",
+    "            #self.draw_damage_info(self.draw, self.detected_damage_queue)\n",
+    "            \n",
+    "            image = ImageTk.PhotoImage(image)\n",
+    "            self.canvas.create_image(0, 0, anchor=tk.NW, image=image)\n",
+    "            self.canvas.image = image\n",
+    "            self.current_image = image\n",
+    "        else:\n",
+    "            self.show_placeholder()\n",
+    "\n",
+    "    def show_placeholder(self):\n",
+    "        placeholder = Image.open(self.no_images_left_placeholder)\n",
+    "        placeholder.thumbnail((self.CANVAS_WIDTH, self.CANVAS_HEIGHT))\n",
+    "        ph = ImageTk.PhotoImage(placeholder)\n",
+    "        self.canvas.create_image(0, 0, anchor=tk.NW, image=ph)\n",
+    "        self.canvas.image = placeholder\n",
+    "        self.current_image = placeholder\n",
+    "\n",
+    "    def prev_image(self):\n",
+    "        self.detected_damage_queue = []\n",
+    "        if self.image_paths:\n",
+    "            self.image_index = (self.image_index - 1) % len(self.image_paths)\n",
+    "            self.show_current_image()\n",
+    "\n",
+    "    def next_image(self):\n",
+    "        self.detected_damage_queue = []\n",
+    "        if self.image_paths:\n",
+    "            self.image_index = (self.image_index + 1) % len(self.image_paths)\n",
+    "            self.show_current_image()\n",
+    "\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['../predicted_images/image_predicted_01.png']\n",
+      "<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=800x498 at 0x24E7A8C2D70>\n",
+      "pyimage2\n",
+      "<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=800x498 at 0x24E7A8C34F0>\n",
+      "pyimage3\n",
+      "<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=800x498 at 0x24E7A8C2BC0>\n",
+      "pyimage4\n",
+      "<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=800x498 at 0x24E7A8C2BF0>\n",
+      "pyimage5\n",
+      "<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=800x498 at 0x24E7A8C30D0>\n",
+      "pyimage6\n",
+      "<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=800x498 at 0x24E7A8C3010>\n",
+      "pyimage7\n",
+      "<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=800x498 at 0x24E7A8C2860>\n",
+      "pyimage8\n"
+     ]
+    }
+   ],
+   "source": [
+    "testroot = tk.Tk()\n",
+    "app = ImageApp(testroot)\n",
+    "tk.mainloop()"
+   ]
   },
   {
    "cell_type": "code",
